--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-// FILE 4: src/index.css
 * {
   margin: 0;
   padding: 0;
@@ -12,3 +11,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+```
+
+**Step 4: Push to GitHub**
+
+Using GitHub Desktop or terminal:
+```
+git add .
+git commit -m "Remove CSS files and fix build"
+git push
